# BinderScout

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_INTEGRATION.md  CONFIGURATOR.md  CONTRIBUTING.md  Dockerfile.test  LICENSE  PHASE2_PLAN.md  PLAN_chai_and_designers.md  PLAN_complexa_aarch64.md  PLAN_standalone_installer.md  README.md  STAGES.md  TODO_standalone_pack.md  bindmaster.py  configurator.py  docker-entrypoint.sh  install.sh  install_aarch.sh  ruff.toml  test_env.sh
Evaluator/: .gitignore  README.md  evaluate.sh  install.sh  pyproject.toml  run.sh
Evaluator/binder_comparison/: __init__.py  main.py
Evaluator/binder_comparison/cli/: __init__.py  extract.py  filter_soluprot.py  parse_seqs.py  refold_af2.py  refold_af3.py  refold_boltz2.py  refold_esmfold2.py  refold_protenix.py  report.py  run.py  validate.py
Evaluator/binder_comparison/comparison/: __init__.py  ensemble.py  merger.py  scoring.py  statistics.py
Evaluator/binder_comparison/core/: __init__.py  normalization.py  schema.py
Evaluator/binder_comparison/extractors/: __init__.py  base.py  bindcraft.py  boltzgen.py  mosaic.py  protein_hunter.py  proteina_complexa.py  pxdesign.py  rfaa.py  rfd3.py
Evaluator/binder_comparison/io/: __init__.py  read.py  write.py
Evaluator/binder_comparison/refolding/: __init__.py  af2_runner.py  af3_runner.py  boltz2_runner.py  esmfold2_runner.py  protenix_runner.py  soluprot_runner.py
Evaluator/binder_comparison/visualization/: __init__.py  plots.py  report.py
Evaluator/docs/: pipeline_reference.md  target_misfolding_analysis.md
Evaluator/docs/plans/: 2026-03-24-refolding-engines-exploration.md
Evaluator/envs/: binder-eval-af2.yml  binder-eval-af3.yml  binder-eval-esmfold2.yml  binder-eval-soluprot.yml  binder-eval.yml
Evaluator/example/: metrics.csv  metrics_zscore.csv  report.html  summary.json
Evaluator/scripts/: discover_tool_csvs.py  filter_soluprot.py  refold_Version6.py  refold_af2.py  refold_af3.py  refold_boltz2.py  refold_esmfold2.py  refold_protenix.py
bindmaster/: feature_flags.py
bindmaster_examples/: hallucinate_bindmaster.py  run_protein_hunter.sh.template  (+1 more)
(+69 files in other folders)
