[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binder-comparison"
version = "0.1.0"
description = "Evaluate protein binder sequences by independent refolding with Boltz-2 (plus Protenix on x86 and AlphaFold 3 on aarch64 / DGX Spark when configured) — sequences in, ranked interface metrics out."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Install in the Mosaic venv for Boltz-2 refolding
boltz2 = [
    "jax",
    "equinox",
]
# Full installation (for the report step only — no heavy ML deps)
report = [
    "jinja2>=3.0",
]
# Everything for the report env
all = [
    "binder-comparison[report]",
]

[project.scripts]
binder-compare = "binder_comparison.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["binder_comparison*"]

[tool.setuptools.package-data]
"binder_comparison" = ["py.typed"]
